# colorex-cpp

./: CMakeLists.txt  LICENSE  README.md  app.rc
.github/workflows/: release.yml
include/: colorex.h
src/: colorex.cpp  main.cpp
